--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,6 @@
 
 @layer components {
     .sidebar {
-      @apply absolute  lg:relative md:relative sm:absolute rounded-2xl  bg-dark-2    ;
+      @apply absolute  lg:relative md:relative sm:absolute sm:z-50 z-50 rounded-2xl  bg-dark-2    ;
     }
   }
