--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 
 @layer components {
     .sidebar {
-      @apply absolute  lg:relative md:relative sm:absolute border-r-2 border-dark  sm:z-50 z-50 
-        bg-dark-2    ;
+      @apply        border-r-2 border-dark  
+           ;
     }
     .app-text {
       @apply  text-black    ;
